--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="startlocation">开始定位</string>
+    <string name="RefreshLocation">刷新</string>
     <string name="stoplocation">停止定位</string>
     <string name="error_code_desc">错误码说明</string>
     <string name="diy_call_back">自定义回调</string>
